--- a/maintain_files/gfwlist.conf
+++ b/maintain_files/gfwlist.conf
@@ -436,6 +436,8 @@ server=/.alwaysvpn.com/127.0.0.1#7913
 ipset=/.alwaysvpn.com/gfwlist
 server=/.am730.com.hk/127.0.0.1#7913
 ipset=/.am730.com.hk/gfwlist
+server=/.amazon.co.jp/127.0.0.1#7913
+ipset=/.amazon.co.jp/gfwlist
 server=/.amazon.com/127.0.0.1#7913
 ipset=/.amazon.com/gfwlist
 server=/.ameblo.jp/127.0.0.1#7913
@@ -806,6 +808,8 @@ server=/.bb-chat.tv/127.0.0.1#7913
 server=/.bbchat.tv/127.0.0.1#7913
 ipset=/.bb-chat.tv/gfwlist
 ipset=/.bbchat.tv/gfwlist
+server=/.bbci.co.uk/127.0.0.1#7913
+ipset=/.bbci.co.uk/gfwlist
 server=/.bbc.in/127.0.0.1#7913
 ipset=/.bbc.in/gfwlist
 server=/.bbg.gov/127.0.0.1#7913
@@ -6340,8 +6344,6 @@ server=/.news100.com.tw/127.0.0.1#7913
 ipset=/.news100.com.tw/gfwlist
 server=/.newsancai.com/127.0.0.1#7913
 ipset=/.newsancai.com/gfwlist
-server=/.news.bbc.co.uk/127.0.0.1#7913
-ipset=/.news.bbc.co.uk/gfwlist
 server=/.newschinacomment.org/127.0.0.1#7913
 ipset=/.newschinacomment.org/gfwlist
 server=/.newscn.org/127.0.0.1#7913
@@ -6352,8 +6354,6 @@ server=/.newsdetox.ca/127.0.0.1#7913
 ipset=/.newsdetox.ca/gfwlist
 server=/.newsdh.com/127.0.0.1#7913
 ipset=/.newsdh.com/gfwlist
-server=/.newsforums.bbc.co.uk/127.0.0.1#7913
-ipset=/.newsforums.bbc.co.uk/gfwlist
 server=/.news.hk.msn.com/127.0.0.1#7913
 ipset=/.news.hk.msn.com/gfwlist
 server=/.news.hkpeanut.com/127.0.0.1#7913
@@ -6494,6 +6494,8 @@ server=/.nottinghampost.com/127.0.0.1#7913
 ipset=/.nottinghampost.com/gfwlist
 server=/.novelasia.com/127.0.0.1#7913
 ipset=/.novelasia.com/gfwlist
+server=/.now.com/127.0.0.1#7913
+ipset=/.now.com/gfwlist
 server=/.now.im/127.0.0.1#7913
 ipset=/.now.im/gfwlist
 server=/.nownews.com/127.0.0.1#7913
@@ -7060,6 +7062,8 @@ server=/.plm.org.hk/127.0.0.1#7913
 ipset=/.plm.org.hk/gfwlist
 server=/.plunder.com/127.0.0.1#7913
 ipset=/.plunder.com/gfwlist
+server=/.plurk.com/127.0.0.1#7913
+ipset=/.plurk.com/gfwlist
 server=/.plus28.com/127.0.0.1#7913
 ipset=/.plus28.com/gfwlist
 server=/.plusbb.com/127.0.0.1#7913
@@ -7082,6 +7086,8 @@ server=/.politicalchina.org/127.0.0.1#7913
 ipset=/.politicalchina.org/gfwlist
 server=/.politicalconsultation.org/127.0.0.1#7913
 ipset=/.politicalconsultation.org/gfwlist
+server=/.politiscales.net/127.0.0.1#7913
+ipset=/.politiscales.net/gfwlist
 server=/.poloniex.com/127.0.0.1#7913
 ipset=/.poloniex.com/gfwlist
 server=/.polymerhk.com/127.0.0.1#7913
@@ -7780,6 +7786,8 @@ server=/.shadowsocks9.com/127.0.0.1#7913
 ipset=/.shadowsocks9.com/gfwlist
 server=/.shadowsocks.asia/127.0.0.1#7913
 ipset=/.shadowsocks.asia/gfwlist
+server=/.shadowsocks.be/127.0.0.1#7913
+ipset=/.shadowsocks.be/gfwlist
 server=/.shadowsocks.com/127.0.0.1#7913
 ipset=/.shadowsocks.com/gfwlist
 server=/.shadowsocks.com.hk/127.0.0.1#7913
