--- a/maintain_files/gfwlist.conf
+++ b/maintain_files/gfwlist.conf
@@ -248,6 +248,8 @@ server=/.abc.pp.ru/127.0.0.1#7913
 ipset=/.abc.pp.ru/gfwlist
 server=/.abc.xyz/127.0.0.1#7913
 ipset=/.abc.xyz/gfwlist
+server=/.abematv.akamaized.net/127.0.0.1#7913
+ipset=/.abematv.akamaized.net/gfwlist
 server=/.abitno.linpie.com/127.0.0.1#7913
 ipset=/.abitno.linpie.com/gfwlist
 server=/.ablwang.com/127.0.0.1#7913
@@ -778,6 +780,8 @@ server=/.bangchen.net/127.0.0.1#7913
 ipset=/.bangchen.net/gfwlist
 server=/.bangyoulater.com/127.0.0.1#7913
 ipset=/.bangyoulater.com/gfwlist
+server=/.bankmobilevibe.com/127.0.0.1#7913
+ipset=/.bankmobilevibe.com/gfwlist
 server=/.bannedbook.org/127.0.0.1#7913
 ipset=/.bannedbook.org/gfwlist
 server=/.bannednews.org/127.0.0.1#7913
@@ -1814,6 +1818,8 @@ server=/.cleansite.us/127.0.0.1#7913
 ipset=/.cleansite.us/gfwlist
 server=/.clearharmony.net/127.0.0.1#7913
 ipset=/.clearharmony.net/gfwlist
+server=/.clearsurance.com/127.0.0.1#7913
+ipset=/.clearsurance.com/gfwlist
 server=/.clearwisdom.net/127.0.0.1#7913
 ipset=/.clearwisdom.net/gfwlist
 server=/.clementine-player.org/127.0.0.1#7913
@@ -1830,6 +1836,8 @@ server=/.cloud.mail.ru/127.0.0.1#7913
 ipset=/.cloud.mail.ru/gfwlist
 server=/.club1069.com/127.0.0.1#7913
 ipset=/.club1069.com/gfwlist
+server=/.cmcn.org/127.0.0.1#7913
+ipset=/.cmcn.org/gfwlist
 server=/.cmi.org.tw/127.0.0.1#7913
 ipset=/.cmi.org.tw/gfwlist
 server=/.cmp.hku.hk/127.0.0.1#7913
@@ -6004,6 +6012,8 @@ server=/.mofos.com/127.0.0.1#7913
 ipset=/.mofos.com/gfwlist
 server=/.mog.com/127.0.0.1#7913
 ipset=/.mog.com/gfwlist
+server=/.mohu.club/127.0.0.1#7913
+ipset=/.mohu.club/gfwlist
 server=/.mohu.ml/127.0.0.1#7913
 ipset=/.mohu.ml/gfwlist
 server=/.mol.gov.tw/127.0.0.1#7913
@@ -7496,6 +7506,8 @@ server=/.revver.com/127.0.0.1#7913
 ipset=/.revver.com/gfwlist
 server=/.rfachina.com/127.0.0.1#7913
 ipset=/.rfachina.com/gfwlist
+server=/.rfalive1.akacast.akamaistream.net/127.0.0.1#7913
+ipset=/.rfalive1.akacast.akamaistream.net/gfwlist
 server=/.rfamobile.org/127.0.0.1#7913
 ipset=/.rfamobile.org/gfwlist
 server=/.rfa.org/127.0.0.1#7913
@@ -9718,6 +9730,8 @@ server=/.vocativ.com/127.0.0.1#7913
 ipset=/.vocativ.com/gfwlist
 server=/.vocn.tv/127.0.0.1#7913
 ipset=/.vocn.tv/gfwlist
+server=/.vod-abematv.akamaized.net/127.0.0.1#7913
+ipset=/.vod-abematv.akamaized.net/gfwlist
 server=/.vod.wwe.com/127.0.0.1#7913
 ipset=/.vod.wwe.com/gfwlist
 server=/.vot.org/127.0.0.1#7913
