--- a/maintain_files/gfwlist.conf
+++ b/maintain_files/gfwlist.conf
@@ -1706,6 +1706,8 @@ server=/.chinese-memorial.org/127.0.0.1#7913
 ipset=/.chinese-memorial.org/gfwlist
 server=/.chinesen.de/127.0.0.1#7913
 ipset=/.chinesen.de/gfwlist
+server=/.chinesenews.net.au/127.0.0.1#7913
+ipset=/.chinesenews.net.au/gfwlist
 server=/.chinesepen.org/127.0.0.1#7913
 ipset=/.chinesepen.org/gfwlist
 server=/.chinese.soifind.com/127.0.0.1#7913
@@ -2062,6 +2064,8 @@ server=/.curvefish.com/127.0.0.1#7913
 ipset=/.curvefish.com/gfwlist
 server=/.cusu.hk/127.0.0.1#7913
 ipset=/.cusu.hk/gfwlist
+server=/.cutscenes.net/127.0.0.1#7913
+ipset=/.cutscenes.net/gfwlist
 server=/.cw.com.tw/127.0.0.1#7913
 ipset=/.cw.com.tw/gfwlist
 server=/.cyberghost.natado.com/127.0.0.1#7913
@@ -2510,6 +2514,8 @@ server=/.dupola.net/127.0.0.1#7913
 ipset=/.dupola.net/gfwlist
 server=/.dushi.ca/127.0.0.1#7913
 ipset=/.dushi.ca/gfwlist
+server=/.dvdpac.com/127.0.0.1#7913
+ipset=/.dvdpac.com/gfwlist
 server=/.dvorak.org/127.0.0.1#7913
 ipset=/.dvorak.org/gfwlist
 server=/.dw.com/127.0.0.1#7913
@@ -6480,6 +6486,8 @@ server=/.nobel.se/127.0.0.1#7913
 ipset=/.nobel.se/gfwlist
 server=/.nobodycanstop.us/127.0.0.1#7913
 ipset=/.nobodycanstop.us/gfwlist
+server=/.nofile.io/127.0.0.1#7913
+ipset=/.nofile.io/gfwlist
 server=/.no-ip.org/127.0.0.1#7913
 ipset=/.no-ip.org/gfwlist
 server=/.nokogiri.org/127.0.0.1#7913
@@ -7206,6 +7214,8 @@ server=/.procopytips.com/127.0.0.1#7913
 ipset=/.procopytips.com/gfwlist
 server=/.prosiben.de/127.0.0.1#7913
 ipset=/.prosiben.de/gfwlist
+server=/.protonvpn.com/127.0.0.1#7913
+ipset=/.protonvpn.com/gfwlist
 server=/.provideocoalition.com/127.0.0.1#7913
 ipset=/.provideocoalition.com/gfwlist
 server=/.provpnaccounts.com/127.0.0.1#7913
@@ -7420,6 +7430,8 @@ server=/.raw.githubusercontent.com/127.0.0.1#7913
 ipset=/.raw.githubusercontent.com/gfwlist
 server=/.razyboard.com/127.0.0.1#7913
 ipset=/.razyboard.com/gfwlist
+server=/.rcam.target.com/127.0.0.1#7913
+ipset=/.rcam.target.com/gfwlist
 server=/.rcinet.ca/127.0.0.1#7913
 ipset=/.rcinet.ca/gfwlist
 server=/.rconversation.blogs.com/127.0.0.1#7913
@@ -7462,6 +7474,14 @@ server=/.redchinacn.net/127.0.0.1#7913
 ipset=/.redchinacn.net/gfwlist
 server=/.redchinacn.org/127.0.0.1#7913
 ipset=/.redchinacn.org/gfwlist
+server=/.redd.it/127.0.0.1#7913
+server=/.reddit.com/127.0.0.1#7913
+ipset=/.reddit.com/gfwlist
+ipset=/.redd.it/gfwlist
+server=/.redditmedia.com/127.0.0.1#7913
+ipset=/.redditmedia.com/gfwlist
+server=/.redditstatic.com/127.0.0.1#7913
+ipset=/.redditstatic.com/gfwlist
 server=/.redhotlabs.com/127.0.0.1#7913
 ipset=/.redhotlabs.com/gfwlist
 server=/.red-lang.org/127.0.0.1#7913
@@ -7562,6 +7582,8 @@ server=/.rosechina.net/127.0.0.1#7913
 ipset=/.rosechina.net/gfwlist
 server=/.rotten.com/127.0.0.1#7913
 ipset=/.rotten.com/gfwlist
+server=/.rsdlmonitor.com/127.0.0.1#7913
+ipset=/.rsdlmonitor.com/gfwlist
 server=/.rsf-chinese.org/127.0.0.1#7913
 ipset=/.rsf-chinese.org/gfwlist
 server=/.rsf.org/127.0.0.1#7913
@@ -8192,6 +8214,8 @@ server=/.sspro.ml/127.0.0.1#7913
 ipset=/.sspro.ml/gfwlist
 server=/.ss.pythonic.life/127.0.0.1#7913
 ipset=/.ss.pythonic.life/gfwlist
+server=/.ssrshare.com/127.0.0.1#7913
+ipset=/.ssrshare.com/gfwlist
 server=/.sss.camp/127.0.0.1#7913
 ipset=/.sss.camp/gfwlist
 server=/.sstmlt.moe/127.0.0.1#7913
@@ -8542,6 +8566,8 @@ server=/.teco-hk.org/127.0.0.1#7913
 ipset=/.teco-hk.org/gfwlist
 server=/.teco-mo.org/127.0.0.1#7913
 ipset=/.teco-mo.org/gfwlist
+server=/.teddysun.com/127.0.0.1#7913
+ipset=/.teddysun.com/gfwlist
 server=/.teeniefuck.net/127.0.0.1#7913
 ipset=/.teeniefuck.net/gfwlist
 server=/.teensinasia.com/127.0.0.1#7913
@@ -9234,6 +9260,8 @@ server=/.twibbon.com/127.0.0.1#7913
 ipset=/.twibbon.com/gfwlist
 server=/.twibs.com/127.0.0.1#7913
 ipset=/.twibs.com/gfwlist
+server=/.twicountry.org/127.0.0.1#7913
+ipset=/.twicountry.org/gfwlist
 server=/.twicsy.com/127.0.0.1#7913
 ipset=/.twicsy.com/gfwlist
 server=/.twiends.com/127.0.0.1#7913
@@ -9500,6 +9528,8 @@ server=/.upwill.org/127.0.0.1#7913
 ipset=/.upwill.org/gfwlist
 server=/.ur7s.com/127.0.0.1#7913
 ipset=/.ur7s.com/gfwlist
+server=/.uraban.me/127.0.0.1#7913
+ipset=/.uraban.me/gfwlist
 server=/.urbansurvival.com/127.0.0.1#7913
 ipset=/.urbansurvival.com/gfwlist
 server=/.urchin.com/127.0.0.1#7913
@@ -9678,6 +9708,8 @@ server=/.vinniev.com/127.0.0.1#7913
 ipset=/.vinniev.com/gfwlist
 server=/.vip-enterprise.com/127.0.0.1#7913
 ipset=/.vip-enterprise.com/gfwlist
+server=/.virtualrealporn.com/127.0.0.1#7913
+ipset=/.virtualrealporn.com/gfwlist
 server=/.visibletweets.com/127.0.0.1#7913
 ipset=/.visibletweets.com/gfwlist
 server=/.vital247.org/127.0.0.1#7913
@@ -9832,6 +9864,8 @@ server=/.vraiesagesse.net/127.0.0.1#7913
 ipset=/.vraiesagesse.net/gfwlist
 server=/.vrmtr.com/127.0.0.1#7913
 ipset=/.vrmtr.com/gfwlist
+server=/.vrsmash.com/127.0.0.1#7913
+ipset=/.vrsmash.com/gfwlist
 server=/.vtunnel.com/127.0.0.1#7913
 ipset=/.vtunnel.com/gfwlist
 server=/.vuku.cc/127.0.0.1#7913
@@ -10244,8 +10278,6 @@ server=/.www.citizenlab.org/127.0.0.1#7913
 ipset=/.www.citizenlab.org/gfwlist
 server=/.www.cmoinc.org/127.0.0.1#7913
 ipset=/.www.cmoinc.org/gfwlist
-server=/.www.coinexchange.io/127.0.0.1#7913
-ipset=/.www.coinexchange.io/gfwlist
 server=/.www.cool18.com/127.0.0.1#7913
 ipset=/.www.cool18.com/gfwlist
 server=/.www.dmm.com/127.0.0.1#7913
@@ -10364,6 +10396,8 @@ server=/.xgmyd.com/127.0.0.1#7913
 ipset=/.xgmyd.com/gfwlist
 server=/.xhamster.com/127.0.0.1#7913
 ipset=/.xhamster.com/gfwlist
+server=/.xianba.net/127.0.0.1#7913
+ipset=/.xianba.net/gfwlist
 server=/.xianchawang.net/127.0.0.1#7913
 ipset=/.xianchawang.net/gfwlist
 server=/.xianjian.tw/127.0.0.1#7913
@@ -10432,6 +10466,8 @@ server=/.xn--i2ru8q2qg.com/127.0.0.1#7913
 ipset=/.xn--i2ru8q2qg.com/gfwlist
 server=/.xn--ngstr-lra8j.com/127.0.0.1#7913
 ipset=/.xn--ngstr-lra8j.com/gfwlist
+server=/.xn--oiq.cc/127.0.0.1#7913
+ipset=/.xn--oiq.cc/gfwlist
 server=/.xn--p8j9a0d9c9a.xn--q9jyb4c/127.0.0.1#7913
 ipset=/.xn--p8j9a0d9c9a.xn--q9jyb4c/gfwlist
 server=/.xnxx.com/127.0.0.1#7913
@@ -10660,6 +10696,8 @@ server=/.zalmos.com/127.0.0.1#7913
 ipset=/.zalmos.com/gfwlist
 server=/.zannel.com/127.0.0.1#7913
 ipset=/.zannel.com/gfwlist
+server=/.zaobao.com/127.0.0.1#7913
+ipset=/.zaobao.com/gfwlist
 server=/.zaobao.com.sg/127.0.0.1#7913
 ipset=/.zaobao.com.sg/gfwlist
 server=/.zaozon.com/127.0.0.1#7913
